2010-09-20  Yves Blusseau  <blusseau@zetam.org>

	Use gnulib-tool to create gnulib source files.

	* Add gnulib files generated by gnulib-tool in build-aux, m4 and
	grub-core/gnulib directories
	* .bzignore: Add **/.deps and autogenerated gnulib files
	* configure.ac: Assign auxiliary directory to build-aux, add invocation
	of gnulib macros, add grub-core/gnulib/Makefile
	* Makefile.am: Add gnulib directory in SUBDIRS (removing unnecessary .),
	include m4 directory to aclocal.
	* Makefile.util.def: Remove direct compilation of gnulib source files
	and use the new grub-core/gnulib/libgnu.a.
	* build-aux/config.rpath: move config.rpath from top directory to
	build-aux
	* conf/Makefile.common: Remove the macro _GL_UNUSED already defined
	in gnulib headers
	* conf/Makefile.extra-dist: Add m4/gnulib-cache.m4
	* grub-core/Makefile.core.def: Remove unnecessary extra_dist
	* grub-core/lib/posix_wrap/localcharset.h (locale_charset): Update
	header.
	* grub-core/lib/posix_wrap/langinfo.h (nl_langinfo): Return static
	string.

2010-09-20  Yves Blusseau  <blusseau@zetam.org>

	* .bzrignore: Add grub-kbdcomp, grub-menulst2cfg, *.marker,
	grub-core/genmod.sh and grub-core/gensyminfo.sh

2010-09-20  BVK Chaitanya  <bvk.groups@gmail.com>

	Add a test for echo command options.

	* tests/grub_cmd_echo.in: New test.
	* Makefile.util.def: Rules for new test.

2010-09-20  Szymon Janc <szymon@janc.net.pl>

	Remove crc.mod and move crc command to hashsum.mod.
	Remove lib/crc.c - users updated to use gcrypt implementation.

	* grub-core/commands/crc.c: Removed.
	* grub-core/Makefile.core.def (crc): Module removed.
	* grub-core/commands/hashsum.c (aliases[]): Add crc alias.
	* grub-core/commands/hashsum.c (GRUB_MOD_INIT): Register crc command.
	* grub-core/commands/hashsum.c (GRUB_MOD_FINI): Unregister crc command.
	* grub-core/lib/crc.c: Removed.
	* include/grub/lib/crc.h: Removed.
	* Makefile.util.def (crc): Remove lib/crc.c